Resolve CSS issues with permissions form
Form is not horizontal and horizontal class skews layout.

The necessary CSS from Curation Concerns is from here:
https://github.com/projecthydra-labs/curation_concerns/blob/c61d6e4cb9c27b1dfde590540bbed9d9ba192b89/app/assets/stylesheets/curation_concerns/modules/forms.scss#L41

This prevents the overlapping and out-of-bounds radio buttons.

Future TODO: get the radio buttons to vertically center in the larger
more complex rows.

--- a/app/assets/stylesheets/sufia/_file_sets.scss
+++ b/app/assets/stylesheets/sufia/_file_sets.scss
@@ -49,3 +49,25 @@ h1.visibility span.label {
 table.files td.preview img {
     height: 50px;
 }
+
+/* From curation_concerns */
+#set-access-controls {
+  label { font-weight: normal; }
+  & > .form-group { padding: 0 1.75em; }
+
+  .form-inline {
+    .control-label, label {
+      padding-left: 0;
+      display: inline;
+      &:after {
+        content: ' ';
+      }
+    }
+    .help-block {
+      display: inline;
+      &:before {
+        content: ' ';
+      }
+    }
+  }
+}
